Sistema de classificação CPC adicionado na importação do ESPCAENET. Gráfico de principais classificações modificado de vido ao CPC. Bugs nos relatórios arrumados. Modificado a edição e a adição de patentes devido ao CPC.

--- a/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
@@ -30,8 +30,10 @@
                         <p:inputTextarea value="#{patentController.selectedPatent.titleSelect}" required="true" 
                                          style="color:  #000000"
                                          requiredMessage="#{msgs['title']} #{msgs['obligatory.field']}"/>
-                        <h:outputLabel value="#{msgs['classification']}: " style="font-weight:bold" />
+                        <h:outputLabel value="#{msgs['classification']} IPC: " style="font-weight:bold" />
                         <p:inputText value="#{patentController.selectedPatent.mainClassification.value}"/>
+                        <h:outputLabel value="#{msgs['classification']} CPC: " style="font-weight:bold" />
+                        <p:inputText value="#{patentController.selectedPatent.mainCPCClassification.value}"/>
 
                     </h:panelGrid>
                 </p:fieldset>
