--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainIPC.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainIPC.xhtml
@@ -18,8 +18,8 @@
 
             <h:form id="chart" styleClass="container">
 
-                <i:filtro controller="#{mainIPCController}" ipcBooleanCheckBox="true" filter="8"/>
-
+                <i:filtro controller="#{mainIPCController}" ipcBooleanCheckBox="true" filter="8" classificationType="true"/>
+                
                 <h:panelGrid id="tudo" columns="2" styleClass="container">
 
 
