--- a/periscope-web/src/main/webapp/pages/project/patent/patentAdd.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentAdd.xhtml
@@ -28,8 +28,10 @@
                             <h:outputLabel value="#{msgs['title']}*: " style="font-weight:bold" />
                             <p:inputTextarea value="#{patentController.selectedPatent.titleSelect}" required="true" 
                                              requiredMessage="#{msgs['title']} #{msgs['obligatory.field']}"/>
-                            <h:outputLabel value="#{msgs['classification']}: " style="font-weight:bold" />
+                            <h:outputLabel value="#{msgs['classification']} IPC: " style="font-weight:bold" />
                             <p:inputText value="#{patentController.selectedPatent.mainClassification.value}"/>
+                            <h:outputLabel value="#{msgs['classification']} CPC: " style="font-weight:bold" />
+                            <p:inputText value="#{patentController.selectedPatent.mainCPCClassification.value}"/>
 
                         </h:panelGrid>
                 </p:fieldset>
