--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogApplicantRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogApplicantRule.xhtml
@@ -53,11 +53,13 @@
                     <p:separator/>
                 </h:column>
                 <h:column>				
-                    <p:dataTable value="#{applicantHarmonizationController.selectedApplicants}" selectionMode="single"
-                                 rowKey="#{spa.name}"
-                                 selection="#{applicantHarmonizationController.selectedRadio}" var="spa">
+                    <p:dataTable id="applicantsTable" value="#{applicantHarmonizationController.selectedApplicants}" selectionMode="single"
+                                 rowKey="#{spa.name}" selection="#{applicantHarmonizationController.selectedRadio}" var="spa"
+                                 rowStyleClass="#{applicantHarmonizationController.selectedRadio.name == spa.name ? 
+                                                  'ui-state-highlight' : spa.harmonized ? 
+                                                  'harmonized-row' : 'normal-row'}">
                         <p:ajax event="rowSelect" listener="#{applicantHarmonizationController.onSelectApplicantFill}" 
-                                update=":#{p:component('panelApplicantHarmonized')}" />
+                                update="@this,:#{p:component('panelApplicantHarmonized')}" />
                         <p:column headerText="#{msgs['name']}">#{spa.name}</p:column>
                     </p:dataTable>
                 </h:column>
@@ -66,9 +68,8 @@
                 </h:column>
                 <h:column>
                     <ul>
-                        <ui:repeat var="sug"
-                                   value="#{applicantHarmonizationController.applicantSugestions}">
-                            <li>
+                        <ui:repeat var="sug" value="#{applicantHarmonizationController.applicantSugestions}">
+                            <li class="#{sug.object.harmonized ? 'harmonized-row' : 'normal-row'}">
                                 <p:selectBooleanCheckbox
                                     onchange="#{applicantHarmonizationController.onSelectApplicantSugestion()}" value="#{sug.selected}" >
                                     <p:ajax event="change" update="@this, :#{p:component('over')}"/>
@@ -81,6 +82,15 @@
                         </h:panelGrid>
                     </ul>
                 </h:column>
+            </h:panelGrid>
+            <p:separator/>
+
+            <h:panelGrid columns="3">
+                <p:outputLabel styleClass="harmonized-row" value="___"/>
+                <p:outputLabel id="harmonized" value=": #{msgs['harmonized']}"/>
+                <p:tooltip for="harmonized">
+                    <p:outputLabel value="#{msgs['applicant']} #{msgs['alredy.harmonized']}" escape="false"/>
+                </p:tooltip>
             </h:panelGrid>
             <p:spacer height="50"/>
             <center>
