--- a/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
@@ -12,7 +12,8 @@
                          emptyMessage="#{msgs['no.inventors']}"
                          value="#{inventorHarmonizationController.inventors}" paginator="true"
                          paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-                         rowKey="#{pa.name}" filterEvent="enter" lazy="true">
+                         rowKey="#{pa.name}" filterEvent="enter" lazy="true"
+                         rowStyleClass="#{pa.harmonized ? 'harmonized-row' : 'normal-row'}">
 
                 <f:facet name="header">
                     <h:panelGrid columns="4" style="width: 20%" cellpadding="5">  
@@ -62,11 +63,22 @@
 
             <p:separator/>
 
+            <h:panelGrid columns="3">
+                <p:outputLabel styleClass="harmonized-row" value="___"/>
+                <p:outputLabel id="invHarmonized" value=": #{msgs['harmonized']}"/>
+                <p:tooltip for="invHarmonized">
+                    <p:outputLabel value="#{msgs['inventor']} #{msgs['alredy.harmonized']}" escape="false"/>
+                </p:tooltip>
+            </h:panelGrid>
+
+            <p:separator/>
+
             <p:dataTable id="selectedInventors" var="pa" style="font-size:12px"
                          emptyMessage="#{msgs['no.selectedinventors']}" widgetVar="tblSelected"
                          value="#{inventorHarmonizationController.selectedInventors}" paginator="true"
                          paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-                         rowKey="#{pa.name}" sortBy="#{pa.name}">
+                         rowKey="#{pa.name}" sortBy="#{pa.name}"
+                         rowStyleClass="#{pa.harmonized ? 'harmonized-row' : 'normal-row'}">
 
                 <p:columnGroup type="header">
                     <p:row>					
